2005-07-07  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (eth_open): Basis of ethernet driver
	is working.

	* src/arch-arm/entry/apex.lds.S: Neglected alignment caused a
	crash when the data segment wasn't aligned.  The service data was
	misaligned such that the service start addresses were wrong. 

2005-07-06  Marc Singer  <elf@buici.com>

	* src/apex/cmd-dump.c (cmd_dump): Added more mode to the dump
	command.

	* src/apex/command.c (expand_variables): Alias and environment
	expansion in the command line.  This will make some people's lives
	easier.

2005-06-15  Marc Singer  <elf@buici.com>

	* src/apex/command.c (exec_monitor): Adding configuration option
	to sort commands for the sake of better help.

	* src/apex/cmd-xreceive.c: Revising help text.

2005-06-14  Marc Singer  <elf@buici.com>

	* src/drivers/driver.c (parse_descriptor): Fixed the driver parser
	dependency on the filesystem drivers.

	* src/drivers/drv-fat.c (fat_read): Region length calc, again.

	* src/drivers/drv-ext2.c (ext2_read): Fixed the region length
	calcs.

	* src/drivers/drv-jffs2.c (jffs2_open): Fixed some of the region
	length calcs.

2005-06-13  Marc Singer  <elf@buici.com>

	* src/drivers/drv-jffs2.c (jffs2_path_to_inode): Needed to
	invalidate the cached block after chasing links.
	(find_cached_inode): Enhanced find_cached_inode() to accept an
	offset within the file.  This may improve the performance of
	reading since it doesn't have to scan the inode list from the top
	every time.  Moreover, the algorithm of the find_cached_inode
	function is more efficient for larget files.
	(jffs2_load_cache): Changed the logic for handling reversed
	markers.  The previous code would prematurely terminate if a
	reversed marker was found among the filesystem detritus. 
	(jffs2_load_cache): Added a CRC check for inodes.
	(jffs2_path_to_inode): Added a CRC check for filenames.

2005-06-12  Marc Singer  <elf@buici.com>
