@@ -1,5 +1,9 @@
 2005-07-07  Marc Singer  <elf@buici.com>
 
+	* src/apex/cmd-help.c (cmd_help): Changed the way that commands
+	are sorted such that there is no change to the R/O portion of the
+	file.  Now, sorting is done only when displaying the help text.
+
 	* src/mach-lh7952x/drv-emac.c (eth_open): Basis of ethernet driver
 	is working.
 
